fix: product big img scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,8 +28,24 @@
 .custom-scroll-bar::-webkit-scrollbar-thumb {
   display: block;
   width: 7px;
-  height: 0;
   border: 1px solid #434348;
+  box-shadow: inset 0 0 1px 0px #434348;
+  background-color: #e4e7ef;
+}
+
+.custom-scroll-bar-horizontal {
+  scrollbar-width: 7px;
+}
+.custom-scroll-bar-horizontal::-webkit-scrollbar {
+  display: block;
+  width: 0;
+  height: 14px;
+  background-color: #434348;
+}
+.custom-scroll-bar-horizontal::-webkit-scrollbar-thumb {
+  display: block;
+  height: 10px;
+  border: 2px solid #434348;
   box-shadow: inset 0 0 1px 0px #434348;
   background-color: #e4e7ef;
 }
